--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3307/forum
+spring.datasource.url=jdbc:mysql://localhost:3306/forum
 spring.datasource.username=root
-spring.datasource.password=root@root
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.security=DEBUG
+spring.jpa.properties.dialect='org.hibernate.dialect.MySQL57InnoDBDialect'
