--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.security=DEBUG
 spring.jpa.properties.dialect='org.hibernate.dialect.MySQL57InnoDBDialect'
+server.error.include-stacktrace=never
