chore: added jwt secret

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.security=DEBUG
 spring.jpa.properties.dialect='org.hibernate.dialect.MySQL57InnoDBDialect'
 server.error.include-stacktrace=never
+
+api.security.token.secret=${JWT_SECRET:1234}
