--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/forum
+
+## spring.datasource.url=jdbc:mysql://172.18.0.2:3306/forum is connecting to my custom docker container network
+
+spring.datasource.url=jdbc:mysql://172.18.0.2:3306/forum
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=validate
@@ -6,6 +9,7 @@ spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.security=DEBUG
 spring.jpa.properties.dialect='org.hibernate.dialect.MySQL57InnoDBDialect'
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 server.error.include-stacktrace=never
 
 api.security.token.secret=${JWT_SECRET:1234}
