--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -9,9 +9,16 @@ on:
 jobs:
 
   setup-java:
+    timeout-minutes: 10
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Start containers
+      run: docker-compose -f "docker-compose.yml" up -d --build
+    
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
