--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Start containers
-      run: docker-compose -f "docker-compose.yml" up -d --build
+      run: docker-compose up -d --build
     
     - name: Set up JDK 17
       uses: actions/setup-java@v3
