--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -15,13 +15,6 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-
-    - name: Create docker image
-      run: docker build -t forum-api .
-
-    - name: Start containers
-      run: docker-compose up -d --build
-    
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
@@ -35,6 +28,32 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
+
+    - name: Run package
+      run: mvn package -Dwaven.test.skip=true
+    
+    # - name: Run test
+    #   run: mvn test
+
+    - name: Create docker image
+      run: docker build -t forum-api .
+
+    - name: Start containers
+      run: docker-compose up -d --build
+    
+    # - name: Set up JDK 17
+    #   uses: actions/setup-java@v3
+    #   with:
+    #     distribution: 'zulu' 
+    #     java-version: '17'
+    # # Caching maven dependencies
+    # - name: Cache local Maven repository
+    #   uses: actions/cache@v3
+    #   with:
+    #     path: ~/.m2/repository
+    #     key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+    #     restore-keys: |
+    #       ${{ runner.os }}-maven-
       
-    - name: Run test
-      run: mvn test
+    # - name: Run test
+    #   run: mvn test
