--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -13,24 +13,13 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v2.1.1
       with:
-        distribution: 'zulu' 
-        java-version: '17'
-    # Caching maven dependencies
-    - name: Cache local Maven repository
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
+        name: java-package
+        path: .
 
-    - name: Run package
-      run: mvn package -DskipTests
-
-    - name: Create docker image
+    - name: Create d image
       run: docker build -t forum-api .
 
     - name: Start containers
