--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -13,6 +13,10 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+    - name: Build Java Artifact
+      uses: ./.github/workflows/create-java-artifact.yml
+
+      
     - name: Download a Build Artifact
       uses: actions/download-artifact@v2.1.1
       with:
