--- a/.github/workflows/create-java-artifact.yml
+++ b/.github/workflows/create-java-artifact.yml
@@ -6,11 +6,12 @@ on:
 jobs:
 
   build:
-
+    timeout-minutes: 10
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v4
     
     - name: Set up JDK 17
       uses: actions/setup-java@v3
