--- a/.github/workflows/create-java-artifact.yml
+++ b/.github/workflows/create-java-artifact.yml
@@ -13,8 +13,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
     
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
+    - name: Setup Java JDK
+      uses: actions/setup-java@v3.13.0
       with:
         distribution: 'zulu' 
         java-version: '17'
