--- a/.github/workflows/create-java-artifact.yml
+++ b/.github/workflows/create-java-artifact.yml
@@ -4,14 +4,11 @@ on:
   workflow_call:
 
 jobs:
-
   build:
-    timeout-minutes: 10
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
     - name: Setup Java JDK
       uses: actions/setup-java@v3.13.0
