--- a/.github/workflows/create-java-artifact.yml
+++ b/.github/workflows/create-java-artifact.yml
@@ -6,8 +6,8 @@ on:
 jobs:
 
   build:
+    timeout-minutes: 10
     runs-on: ubuntu-latest
-    
     steps:
     - name: Checkout
       uses: actions/checkout@v4
