--- a/.github/workflows/create-java-artifact.yml
+++ b/.github/workflows/create-java-artifact.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Setup Java JDK
-        uses: actions/setup-java@v3.13.0
+      - uses: actions/setup-java@v3.13.0
         with:
           distribution: zulu
           java-version: '17'
