--- a/.github/workflows/create-java-artifact.yml
+++ b/.github/workflows/create-java-artifact.yml
@@ -4,7 +4,9 @@ jobs:
   artefato:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v4
+      
     - name: Setup Java JDK
       uses: actions/setup-java@v3.13.0
       with:
