--- a/.github/workflows/create-docker-image.yml
+++ b/.github/workflows/create-docker-image.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Download a Build Artifact
       uses: actions/download-artifact@v2.1.1
